--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,11 @@
 @tailwind utilities;
 
 @import "flowbite/src/themes/default";
+/* Ümumi font tətbiqi */
+h1, h2, h3, h4, h5, h6 {
+  @apply font-heading;
+}
+
+p, span {
+  @apply font-body;
+}
